# beethoven

./: Cargo.toml  README.md
crates/client/: Cargo.toml
crates/client/src/: error.rs  lib.rs
crates/client/src/deposit/: kamino.rs  marginfi.rs  mod.rs
crates/client/src/swap/: aldrin.rs  futarchy.rs  gamma.rs  manifest.rs  mod.rs
crates/client/src/withdraw/: kamino.rs  marginfi.rs  mod.rs
crates/client/tests/: gamma_discover.rs  manifest.rs  mod.rs
crates/client/tests/deposit/: kamino.rs  marginfi.rs
crates/client/tests/withdraw/: kamino.rs  marginfi.rs  mod.rs
crates/core/src/: lib.rs
crates/deposit/jupiter/src/: lib.rs
crates/deposit/kamino/src/: lib.rs
crates/swap/aldrin-v2/src/: lib.rs
crates/swap/aldrin/src/: lib.rs
crates/swap/futarchy/src/: lib.rs
crates/swap/gamma/src/: lib.rs
crates/swap/heaven/src/: lib.rs
crates/swap/manifest/src/: lib.rs
crates/swap/omnipair/src/: lib.rs
crates/swap/perena/src/: lib.rs
crates/swap/scale-amm/: Cargo.toml
crates/swap/scale-amm/src/: lib.rs
crates/swap/scale-vmm/: Cargo.toml
crates/swap/scale-vmm/src/: lib.rs
crates/swap/solfi-v2/src/: lib.rs
crates/swap/solfi/src/: lib.rs
crates/withdraw/kamino/: Cargo.toml
crates/withdraw/kamino/src/: lib.rs
crates/withdraw/marginfi/: Cargo.toml
crates/withdraw/marginfi/src/: lib.rs
program-test/: Cargo.toml
program-test/src/: deposit.rs  lib.rs  withdraw.rs
src/: context.rs  lib.rs
src/programs/: mod.rs
src/programs/jupiter/: mod.rs
src/programs/kamino/: mod.rs
src/traits/: deposit.rs  mod.rs  withdraw.rs
tests/: helper.rs  integration.rs
tests/deposit/: mod.rs
tests/swap/: mod.rs  scale_amm.rs  scale_vmm.rs
tests/withdraw/: kamino.rs  marginfi.rs  mod.rs
