[package]
name = "beethoven"
description = "A Trait-based client that lets you compose programs extremely easily"
version = "0.0.1"
license = "MIT"
edition = "2021"

[features]
default = ["deposit", "withdraw", "swap"]

# Test program selection (for dev-dependencies)
upstream-bpf = []

# Action groups
deposit = ["kamino-deposit", "jupiter-deposit", "drift-deposit", "marginfi-deposit"]
withdraw = ["marginfi-withdraw"]
swap = [
    "perena-swap",
    "solfi-swap",
    "solfi_v2-swap",
    "manifest-swap",
    "heaven-swap",
    "aldrin-swap",
    "aldrin_v2-swap",
    "futarchy-swap",
    "gamma-swap",
    "scale_amm-swap",
    "scale_vmm-swap",
    "omnipair-swap",
    "hadron-swap",
    "raydium-cpmm-swap",
]

# Deposit protocols
kamino-deposit = ["dep:beethoven-deposit-kamino"]
jupiter-deposit = ["dep:beethoven-deposit-jupiter"]
drift-deposit = ["dep:beethoven-deposit-drift"]
marginfi-deposit = ["dep:beethoven-deposit-marginfi"]

# Withdraw protocols
marginfi-withdraw = ["dep:beethoven-withdraw-marginfi"]

# Swap protocols
perena-swap = ["dep:beethoven-swap-perena"]
solfi-swap = ["dep:beethoven-swap-solfi"]
solfi_v2-swap = ["dep:beethoven-swap-solfi-v2"]
manifest-swap = ["dep:beethoven-swap-manifest"]
heaven-swap = ["dep:beethoven-swap-heaven"]
aldrin-swap = ["dep:beethoven-swap-aldrin"]
aldrin_v2-swap = ["dep:beethoven-swap-aldrin-v2"]
futarchy-swap = ["dep:beethoven-swap-futarchy"]
gamma-swap = ["dep:beethoven-swap-gamma"]
scale_amm-swap = ["dep:beethoven-swap-scale-amm"]
scale_vmm-swap = ["dep:beethoven-swap-scale-vmm"]
omnipair-swap = ["dep:beethoven-swap-omnipair"]
hadron-swap = ["dep:beethoven-swap-hadron"]
raydium-cpmm-swap = ["dep:beethoven-swap-raydium-cpmm"]

[dependencies]
beethoven-core = { path = "crates/core" }
solana-account-view = "1.0.0"
solana-address = "2.0.0"
solana-instruction-view = "1.0.0"
solana-program-error = "3.0.0"

# Optional protocol crates
beethoven-deposit-kamino = { path = "crates/deposit/kamino", optional = true }
beethoven-deposit-jupiter = { path = "crates/deposit/jupiter", optional = true }
beethoven-deposit-drift = { path = "crates/deposit/drift", optional = true }
beethoven-deposit-marginfi = { path = "crates/deposit/marginfi", optional = true }
beethoven-withdraw-marginfi = { path = "crates/withdraw/marginfi", optional = true }
beethoven-swap-perena = { path = "crates/swap/perena", optional = true }
beethoven-swap-solfi = { path = "crates/swap/solfi", optional = true }
beethoven-swap-solfi-v2 = { path = "crates/swap/solfi-v2", optional = true }
beethoven-swap-manifest = { path = "crates/swap/manifest", optional = true }
beethoven-swap-heaven = { path = "crates/swap/heaven", optional = true }
beethoven-swap-aldrin = { path = "crates/swap/aldrin", optional = true }
beethoven-swap-aldrin-v2 = { path = "crates/swap/aldrin-v2", optional = true }
beethoven-swap-futarchy = { path = "crates/swap/futarchy", optional = true }
beethoven-swap-gamma = { path = "crates/swap/gamma", optional = true }
beethoven-swap-scale-amm = { path = "crates/swap/scale-amm", optional = true }
beethoven-swap-scale-vmm = { path = "crates/swap/scale-vmm", optional = true }
beethoven-swap-omnipair = { path = "crates/swap/omnipair", optional = true }
beethoven-swap-hadron = { path = "crates/swap/hadron", optional = true }
beethoven-swap-raydium-cpmm = { path = "crates/swap/raydium-cpmm", optional = true }

[workspace]
members = [
    "crates/core",
    "crates/deposit/kamino",
    "crates/deposit/jupiter",
    "crates/deposit/drift",
    "crates/deposit/marginfi",
    "crates/withdraw/marginfi",
    "crates/swap/perena",
    "crates/swap/solfi",
    "crates/swap/solfi-v2",
    "crates/swap/manifest",
    "crates/swap/heaven",
    "crates/swap/aldrin",
    "crates/swap/aldrin-v2",
    "crates/swap/futarchy",
    "crates/swap/gamma",
    "crates/swap/scale-amm",
    "crates/swap/scale-vmm",
    "crates/swap/omnipair",
    "crates/swap/hadron",
    "crates/swap/raydium-cpmm",
    "program-test",
    "crates/client",
]

[dev-dependencies]
base64 = "0.22"
litesvm = "0.11.0"
serde_json = "1"
solana-account = "3.3.0"
solana-clock = "3.0.0"
solana-instruction = "3.1.0"
solana-keypair = "3.1.0"
solana-program-option = "3.0.0"
solana-program-pack = "3.0.0"
solana-rent = "3.1.0"
solana-sdk-ids = "3.1.0"
solana-signer = "3.0.0"
solana-transaction = "3.0.2"
solana-compute-budget-instruction = "3.1.7"
spl-token-interface = "2"
mollusk-svm = "0.11.0"
mollusk-svm-programs-token = "0.11.0"
beethoven-client = { path = "crates/client", features = [
    "manifest",
    "gamma",
    "hadron",
    "raydium_cpmm",
    "resolve",
] }
solana-rpc-client = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
