[package]
name = "beethoven-test"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
default = []
upstream-bpf = ["dep:solana-define-syscall"]

[dependencies]
beethoven = { path = "..", features = ["deposit", "withdraw", "swap"] }
pinocchio = { version = "0.10.1", default-features = false, features = [
    "alloc",
] }
solana-define-syscall = { version = "4.0.1", features = [
    "unstable-static-syscalls",
], optional = true }
