[package]
name = "beethoven-client"
description = "Client-side helper for composing Beethoven swap instructions"
version = "0.0.1"
license = "MIT"
edition = "2021"

[features]
default = ["swap", "resolve"]

swap = [
    "manifest",
    "aldrin",
    "futarchy",
    "gamma",
]

resolve = [
    "dep:solana-rpc-client",
    "dep:solana-rpc-client-api",
    "dep:solana-account",
    "dep:solana-account-decoder-client-types",
]

manifest = []
aldrin = []
futarchy = []
gamma = []

[dependencies]
solana-pubkey = { version = "4", features = ["curve25519"] }
solana-instruction = "3"
solana-rpc-client = { version = "3", optional = true }
solana-rpc-client-api = { version = "3", optional = true }
solana-account = { version = "3", optional = true }
solana-account-decoder-client-types = { version = "3", optional = true }
thiserror = "2"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
