[package]
name = "beethoven-swap-scale-amm"
description = "Scale AMM swap implementation for Beethoven"
version = "0.0.1"
license = "MIT"
edition = "2021"

[dependencies]
beethoven-core = { path = "../../core" }
solana-account-view = "1.0.0"
solana-address = { version = "2.0.0", features = ["decode"] }
solana-instruction-view = "1.0.0"
solana-program-error = "3.0.0"
